# Seq80x25

./: .gitignore  Makefile  README.md  USAGE.md  audio_effects.py  cli_tool.py  config.ini  demo.py  export_tools.py  launch.bat  launch.sh  patterns.py  project_manager.py  pyproject.toml  pytest.ini  screen.txt  seq80x25.css  seq80x25.py  setup.py
tests/: __init__.py  test_sequencer.py
